# CmakeTrainAndroidVS

./: CMakeLists.txt  CmakeTrainVS.cpp  CmakeTrainVS.h  README.md
CmakeTrainVS/: CMakeLists.txt  CmakeTrainVS.cpp
copyFunc/: CMakeLists.txt  CopyConstructor.cpp  CopyConstructor.h  ShallowCopy.cpp
